more spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ h1 {
   text-align: center;
   position: relative;
   margin: 0px;
-  padding: 70px;
+  padding: 40px;
 }
 
 h2 {
